--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/account/myAccountLogin.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/account/myAccountLogin.htm
@@ -11,10 +11,10 @@
 					<td colspan="2" width="100%" class="warenkorbTitle">[TRANSLATION:MEIN ACCOUNT LOGIN]</td>
 			  	</tr>
                 <tr>
-                    <td height="30">&nbsp; <br>
-					<br>
-					<br>
-					<br>
+                    <td height="30">&nbsp; <br />
+					<br />
+					<br />
+					<br />
 &nbsp;</td>
                 </tr>
             </table>
@@ -37,14 +37,14 @@
 														<table border="0" cellspacing="0" cellpadding="0" width="100%%" id="AutoNumber6">
                                                 <tr>
                                                     <td width="100%" colspan="3">
-                                                        <span class="techblue"><font color="#797A79"><b>[TRANSLATION:Registrierter Kunde]</b></font></span><br>
+                                                        <span class="techblue"><font color="#797A79"><b>[TRANSLATION:Registrierter Kunde]</b></font></span><br />
                                                         &nbsp;
                                                     </td>
                                                 </tr>
                                                 <tr>
                                                     <td width="100%" colspan="3">
                                                         <font face="Verdana,Tahoma,Arial,Helvetica" size="1">Falls Sie sich bereits bei uns
-                                                            registriert haben, geben Sie bitte ihre eMail Adresse und Passwort ein:<br><br></font>
+                                                            registriert haben, geben Sie bitte ihre eMail Adresse und Passwort ein:<br /><br /></font>
                                                     </td>
                                                 </tr>
                                                 <tr>
@@ -63,7 +63,7 @@
                                                 </tr>
 												<tr>
 													<td></td>
-													<td align="center"><input type="submit" class="button" value="Login" name="B1"> <input type="button"  class="button" value="Cancel" name="B5" onclick="document.location='default.asp'"></td>
+													<td align="center"><input type="submit" class="button" value="Login" name="B1"> <input type="button"  class="button" value="Cancel" name="B5" onclick="document.location='default.aspx'"></td>
 													<td></td>
 												</tr>
                                                 <tr>
@@ -77,8 +77,8 @@ function PasswordSend() {
 		a.document.write("<HTML><HEAD><TITLE>Passwort Lost</TITLE></HEAD>");
 		a.document.write("<BODY bgcolor=#FFFFFF>\n");
 		a.document.write ("<table width=100% border=1 cellspacing=0 bordercolor=#0000A0><tr><td><BIG>Passwort vergessen?</BIG></td></tr>\n");
-		a.document.write ("<tr><td align=center>Tragen Sie bitte hier Ihren Nachnamen und Emailadresse.&nbsp;<br> Das Passwort wird sofort gesendet.&nbsp;&nbsp;&nbsp;</td></tr></table>\n");
-		a.document.write("<br>");
+		a.document.write ("<tr><td align=center>Tragen Sie bitte hier Ihren Nachnamen und Emailadresse.&nbsp;<br /> Das Passwort wird sofort gesendet.&nbsp;&nbsp;&nbsp;</td></tr></table>\n");
+		a.document.write("<br />");
 		a.document.write ("<form action='/cgi/account/DoSendPassword.aspx' method='post'>\n");
 		a.document.write ("<TABLE align=center border=1 borderColor=green cellPadding=3 cellSpacing=0>\n");
 		a.document.write ("<TR>\n");
@@ -117,7 +117,7 @@ function PasswordSend() {
                                             bordercolor="#111111" width="100%" id="AutoNumber7">
                                             <tr>
                                                 <td width="100%">
-                                                    <font color="#797A79"><span class="techblue"><b>[TRANSLATION:Neukunde]</b></span><br>
+                                                    <font color="#797A79"><span class="techblue"><b>[TRANSLATION:Neukunde]</b></span><br />
                                                         &nbsp;</font>
                                                 </td>
                                             </tr>
@@ -131,9 +131,9 @@ function PasswordSend() {
                                                                     <td width="100%">
                                                                         <p align="center">
                                                                             <font face="Verdana,Tahoma,Arial,Helvetica" size="1">
-                                                                                <br>
+                                                                                <br />
                                                                                 <input type="button" value="Jetzt registrieren"  class="button" onclick="document.location='default.asp?PageToShow=NewAccount'"
-                                                                                    name="B6"></font><br>
+                                                                                    name="B6"></font><br />
                                                                         &nbsp;
                                                                     </td>
                                                                 </tr>
