--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/basket/warenkorb_login.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/basket/warenkorb_login.htm
@@ -25,15 +25,15 @@
                             bordercolor="#111111" width="90%" id="AutoNumber6">
                             <tr>
                                 <td width="100%" colspan="3">
-                                    <b><font size="1" face="Verdana" color="#DB0F21">&gt; [TRANSLATION:BESTEHENDES KUNDENKONTO]</font></b><br>
+                                    <b><font size="1" face="Verdana" color="#DB0F21">&gt; [TRANSLATION:BESTEHENDES KUNDENKONTO]</font></b><br />
                                     &nbsp;
                                 </td>
                             </tr>
                             <tr>
                                 <td width="100%" colspan="3">
                                     <font face="Verdana,Tahoma,Arial,Helvetica" size="1">Falls Sie sich bereits bei uns
-                                        registriert haben, geben Sie bitte ihre eMail Adresse und Passwort ein:<br>
-                                        <br>
+                                        registriert haben, geben Sie bitte ihre eMail Adresse und Passwort ein:<br />
+                                        <br />
                                     </font>
                                 </td>
                             </tr>
@@ -80,7 +80,7 @@
                     <tr>
                         <td width="100%">
                             <b><font size="1" face="Verdana" color="#DB0F21">&gt; [TRANSLATION:NEUES KUNDENKONTO
-                                ANLEGEN]</font></b><br>
+                                ANLEGEN]</font></b><br />
                             &nbsp;
                         </td>
                     </tr>
@@ -88,15 +88,15 @@
                         <td width="100%">
                             <div align="left">
                                 <font face="Verdana,Tahoma,Arial,Helvetica" size="1">Sie sind noch kein Kunde bei uns
-                                    oder haben noch nie im Internet bei uns gekauft, dann registrieren Sie sich jetzt.<br>
+                                    oder haben noch nie im Internet bei uns gekauft, dann registrieren Sie sich jetzt.<br />
                                     &nbsp;</font><table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse"
                                         bordercolor="#111111" width="100%" id="AutoNumber9">
                                         <tr>
                                             <td width="100%">
                                                 <p align="center">
                                                     <font face="Verdana,Tahoma,Arial,Helvetica" size="1">
-                                                        <input type="button" value="Erstellen" onclick="document.location='default.aspx?PageToShow=NewAccount'"
-                                                            name="B6"></font><br>
+                                                        <input type="button" value="Erstellen" onclick="document.location='default.asp?PageToShow=NewAccount'"
+                                                            name="B6"></font><br />
                                                 &nbsp;
                                             </td>
                                         </tr>
@@ -115,12 +115,12 @@
             <td width="50%" valign="top">
                 <b><font size="1" face="Verdana" color="#DB0F21">&gt; </font></b><font face="Verdana"
                     color="#DB0F21" size="1"><b>[TRANSLATION:PASSWORT VERGESSEN]</b></font><font face="Verdana, Tahoma, Arial, Helvetica"
-                        color="black" size="1"><br>
-                        <br>
+                        color="black" size="1"><br />
+                        <br />
                         Falls sich Ihre eMail Adresse geändert hat, informieren Sie uns bitte unter: <a href="mailto:info@ptec.co.at?subject=email_changes">
-                            infoe@ptec.co.at</a><br>
-                        <br>
-                        Sollten Sie Ihr Passwort vergessen haben, füllen sie bitte das Formular aus.<br>
+                            infoe@ptec.co.at</a><br />
+                        <br />
+                        Sollten Sie Ihr Passwort vergessen haben, füllen sie bitte das Formular aus.<br />
                         &nbsp;</font><table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse"
                             bordercolor="#111111" width="100%" id="AutoNumber10">
                             <tr>
@@ -134,9 +134,9 @@ function PasswordSend() {
 		var a = window.open ("forgotten",null, "height=400,width=400,status=yes,toolbar=no,menubar=no,location=no");
 		a.document.write ("<HTML><link REL='stylesheet' HREF='./style.css' TYPE='text/css'><BODY bgcolor=#FFFFFF>\n");
 		a.document.write ("<center>\n");
-		a.document.write ("<div align=center><BR>\n");
+		a.document.write ("<div align=center><br />\n");
 		a.document.write ("<table width=100% border=1 cellspacing=0 bordercolor=#0000A0><tr><td><BIG>Passwort vergessen?</BIG></td></tr>\n");
-		a.document.write ("<tr><td align=center>Tragen Sie bitte hier Ihren Nachnamen und Emailadresse.&nbsp;<br> Das Passwort wird sofort gesendet.&nbsp;&nbsp;&nbsp;</td></tr></table>\n");
+		a.document.write ("<tr><td align=center>Tragen Sie bitte hier Ihren Nachnamen und Emailadresse.&nbsp;<br /> Das Passwort wird sofort gesendet.&nbsp;&nbsp;&nbsp;</td></tr></table>\n");
 		a.document.write ("<form action='cgi/account/DoSendPassword.aspx' method='post'>\n");
 		a.document.write ("<TABLE border=1 borderColor=green cellPadding=3 cellSpacing=0>\n");
 		a.document.write ("<TR>\n");
