--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/contentLinks.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/contentLinks.htm
@@ -4,10 +4,10 @@
 				<img border="0" src="../images/spacer.gif" width="1" height="2"></td>
 			</tr>
 			<tr>
-				<td><br>
-				<A href="default.asp?pageToShow=MerchantList">H&auml;ndlerliste</A><br>	
-			   <A href="default.asp?pageToShow=ManufacturerList">Herstellerliste</A><br>
+				<td><br />
+				<A href="default.asp?pageToShow=MerchantList">H&auml;ndlerliste</A><br />	
+			   <A href="default.asp?pageToShow=ManufacturerList">Herstellerliste</A><br />
 				   <A href="default.asp?pageToShow=ProductMap">Alle Produktkategorien</A></td>
 			</tr>
 			</table>
-			<br>
+			<br />
