--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/functions/clearance.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/functions/clearance.htm
@@ -15,7 +15,7 @@
 			<table border="0" width="194" id="table2" cellspacing="0" cellpadding="0">
 				<tr>
 					<td><font face="Verdana" size="1"><font color="#797A79">START SHOPPING before your item is 
-		GONE!!!<br>
+		GONE!!!<br />
 		</font>
 		<span class="adDescription"><font color="#797A79"><i>these deals are in limited quantities</i>, 
 		so if you see something you like today, don't hesitate - it may be gone 
