--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/functions/deal.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/functions/deal.htm
@@ -9,8 +9,8 @@
           <p align="center">
           <font size="1" face="Verdana">
           <a href="default.asp?PageToShow=ProductMap&Manufacturer=Sony">
-          <img border="0" src="skins/skin_immo/images/man_logos/sony.gif" width="71" height="16"></a><br>
-          <br>
+          <img border="0" src="skins/skin_immo/images/man_logos/sony.gif" width="71" height="16"></a><br />
+          <br />
           Top deal for free shipping</font></td>
         </tr>
         <tr>
