--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/functions/faq.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/functions/faq.htm
@@ -17,7 +17,7 @@
                           Hilfe f&uuml;r die aktuelle Seite</td>
                         </tr>
                       </table>
-                      <font face="Verdana" size="1"><br>
+                      <font face="Verdana" size="1"><br />
                       [FAQ_LIST]</font></td>
                     </tr>
                   </table>
