--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/functions/featured_shops.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/functions/featured_shops.htm
@@ -11,8 +11,8 @@
         <tr>
           <td width="100%" background="skins/skin_immo/images/bg/right_bg.gif" height="1">
           <p align="center"><b><font size="1" face="Verdana" color="#6F716F">
-			Featured Partners</font></b><br>
-			<br>
+			Featured Partners</font></b><br />
+			<br />
           &nbsp;</td>
         </tr>
         <tr>
