--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/productPageSmall.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/productPageSmall.htm
@@ -23,7 +23,7 @@
   <tr>
   <td border="0" width="96">
    <p align="center">
-             <img border="0" src="skins/skin3/images/spacer.gif" width="96" height="1"><br>
+             <img border="0" src="skins/skin3/images/spacer.gif" width="96" height="1"><br />
    			<a href="default.asp?ArtNr=[ArtNr]">
 				<img src=productImages/thumbnail.aspx?width=120&amp;filename=productImages\[ArtNr].gif border="0"></a></td>
   <td border="0" width="14" style="border-right-style: none; border-right-width: medium" height="1">
