--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/productPageSmall_Top3.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/productPageSmall_Top3.htm
@@ -12,7 +12,7 @@
 				</tr>
 				<tr>
 					<td>
-      <p align="center"><font size="1" face="Verdana">[makeImgTag]<br>
+      <p align="center"><font size="1" face="Verdana">[makeImgTag]<br />
 		</font>
 							<img border="0" src="skins/skin6/images/spacer.gif" width="1" height="6"></td>
 				</tr>
