--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/productPage_part6.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/productPage_part6.htm
@@ -6,7 +6,7 @@
 		</tr>
 		<tr>
 			<td background="skins/skin_ptec/images/boxes/zoom_bg.gif">
-			<p align="center"><form action='cgi/calls/DoSendToFriend.asp' method='post' id=form1 name=form1>
+			<p align="center"><form action='cgi/calls/DoSendToFriend.aspx' method='post' id=form1 name=form1>
 		<center>
 	
 		<TABLE border=0 borderColor=#008000 cellPadding=3 cellSpacing=0 width="500">
@@ -32,7 +32,7 @@
 		<font face="Verdana" style="font-size: 8pt">Text:</font></B></Td>
 		<td>
 		
-        <BR><textarea name='BodyMail' cols=59 rows=7>http://www.ptec.co.at/default.asp?ArtNr=[ArtNr]	</textarea></td>
+        <br /><textarea name='BodyMail' cols=59 rows=7>http://www.ptec.co.at/default.asp?ArtNr=[ArtNr]	</textarea></td>
 		</tr>
 		<TR>
 		<Td border=0 colspan=2 align=center>
