--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/productPage_part_print.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/productPage_part_print.htm
@@ -26,11 +26,11 @@ print();
 				<p align="center">
   <font size="1" face="Verdana">[makeImgTagName:productimages/[ArtNr].jpg]</font></td>
 				<td width="132" valign="top"><b>
-			<font size="1" face="Verdana">[Bezeichnung]</font></b><font face="Verdana" size="1"><br>
-				<br>
+			<font size="1" face="Verdana">[Bezeichnung]</font></b><font face="Verdana" size="1"><br />
+				<br />
 				SAN</font><font face="Verdana"><font size="1">
 			</font> <b><font size="1">:: </font></b></font>
-          <font size="1" face="Verdana">[ArtNr]<br>
+          <font size="1" face="Verdana">[ArtNr]<br />
 				EAN</font><font face="Verdana"><font size="1">
 			</font>
           <b><font size="1">:: </font></b></font>
@@ -46,7 +46,7 @@ print();
 <font size="1" face="Verdana">[Beschreibung]</font></td>
 						</tr>
 					</table>
-					<p><br>
+					<p><br />
 &nbsp;</div>
 				</td>
 				<td width="132">&nbsp;</td>
