--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/productSearch.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/productSearch.htm
@@ -40,14 +40,14 @@
         <tr>
           <td width="100%" height="12" valign="top" align="center">
           <p align="center"><font color="#B52C21">
-          <br>
-          [FUNCTION3]<br>
+          <br />
+          [FUNCTION3]<br />
 &nbsp;</font></td>
         </tr>
         <tr>
           <td width="100%" height="1" valign="top" align="center">
-          [TOOLBAR]<br>
-          [BANNER1]<br>
+          [TOOLBAR]<br />
+          [BANNER1]<br />
           [BANNER2]</td>
         </tr>
         <tr>
@@ -81,7 +81,7 @@
 				<tr>
 					<td widtd="100%" align="right" width="955" colspan="4">
 					<p align="left"><b>
-					<font size="2"  color="#B52C21"><br>
+					<font size="2"  color="#B52C21"><br />
 					Detail Suche:</font></b></td>
 				</tr>
 				<tr>
