--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/template_DetailSearchResult.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/template_DetailSearchResult.htm
@@ -23,7 +23,7 @@
                           <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="96%" >
                             <tr>
                               <td width="100%"><font size="1">Filter
-                                    By Category<br>
+                                    By Category<br />
                                     [CATEGORY_FILTER]</font></td>
                             </tr>
                           </table>
