--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/template_Merchantlist.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/template_Merchantlist.htm
@@ -37,7 +37,7 @@
             <td width="100%" height="12" valign="top" align="center"><img border="0" src="../images/spacer.gif" alt="spacer" width="2" height="10"></td>
           </tr>
           <tr>
-            <td width="100%" height="1" valign="top" align="center"><img border="0" src="../images/spacer.gif" alt="spacer" width="51" height="1"><img border="0" src="skins/skin_PriceCompare_at/images/icons/werbung.gif" alt="werbung" hspace="0" width="69" height="10" align="center"><br>
+            <td width="100%" height="1" valign="top" align="center"><img border="0" src="../images/spacer.gif" alt="spacer" width="51" height="1"><img border="0" src="skins/skin_PriceCompare_at/images/icons/werbung.gif" alt="werbung" hspace="0" width="69" height="10" align="center"><br />
               <img border="0" src="../images/spacer.gif" alt="spacer" width="42" height="1">[BANNER1]</td>
           </tr>
           <tr>
@@ -67,9 +67,9 @@
 			<span lang="DE-AT" style="font-family: Verdana"><b>
 			<a href="http://www.smartefox.com/default.asp?pageToShow=WebPage&PreKatNr=-999&WebPage=Kontakt">
 			<span style="text-decoration: none"><font color="#B52C21">JETZT 
-			KOSTENLOS EINSTEIGEN UND WERBEN!!!</font></span></a></b></span></font><span lang="DE-AT" style="COLOR: black; FONT-FAMILY: Verdana"><br>
-			<br>
-			</span></font><br>
+			KOSTENLOS EINSTEIGEN UND WERBEN!!!</font></span></a></b></span></font><span lang="DE-AT" style="COLOR: black; FONT-FAMILY: Verdana"><br />
+			<br />
+			</span></font><br />
 			[BODY]</td>
         </tr>
       </table>
