--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/template_MyBookmarks.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/template_MyBookmarks.htm
@@ -42,14 +42,14 @@
         <tr>
           <td width="100%" height="12" valign="top" align="center">
           <p align="center"><font  size="1"><font color="#B52C21">
-          <br>
-          [FUNCTION3]<br>
+          <br />
+          [FUNCTION3]<br />
 &nbsp;</font></td>
         </tr>
         <tr>
           <td width="100%" height="1" valign="top" align="center">
-          <font  size="1">[TOOLBAR]<br>
-          [BANNER1]<br>
+          <font  size="1">[TOOLBAR]<br />
+          [BANNER1]<br />
           [BANNER2]</font></td>
         </tr>
         <tr>
@@ -72,39 +72,39 @@
       <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="90%" >
         <tr>
           <td width="100%">
-			<img border="0" src="skins/skin4/images/text/wishlist.gif" width="450" height="30"><br>
-			<br>
-			<br>
+			<img border="0" src="skins/skin4/images/text/wishlist.gif" width="450" height="30"><br />
+			<br />
+			<br />
 			[BODY]
 									If you already have an account, just login 
 									to your account. <b>
-			<a href="default.asp?PageToShow=MyAccount">LOGIN &gt;&gt;</a><br>
-			<br>
-			How do I make a Wishlist?<br>
-			</b><br>
+			<a href="default.asp?PageToShow=MyAccount">LOGIN &gt;&gt;</a><br />
+			<br />
+			How do I make a Wishlist?<br />
+			</b><br />
 									To create a Wishlist you must first	create a 
 			<b><a href="default.asp?PageToShow=NewAccount">smartefox.com account</a></a></b> if you don't 
-									already have one. <br>
+									already have one. <br />
 									If you already have an account, just login 
 									to your account. <b>
-			<a href="default.asp?PageToShow=MyAccount">LOGIN &gt;&gt;</a><font color="#B52C21"><br>
-									<br>
+			<a href="default.asp?PageToShow=MyAccount">LOGIN &gt;&gt;</a><font color="#B52C21"><br />
+									<br />
 									</font></b>Go to any part of the 
 									smartefox.com site. When you find a product 
 									that you want to add to your Wishlist, click 
-									the Wishlist link<b><font color="#B52C21"><br>
-									<br>
-			<br>
-									<br>
-									</font>Save Your Shopping Basket?<font color="#B52C21"><br>
-			<br>
+									the Wishlist link<b><font color="#B52C21"><br />
+									<br />
+			<br />
+									<br />
+									</font>Save Your Shopping Basket?<font color="#B52C21"><br />
+			<br />
 									</font></b>To Save Your Shopping Basket you must first	create a 
 			<b><a href="default.asp?PageToShow=NewAccount">smartefox.com account</a></a></b> if you don't 
-									already have one. <br>
+									already have one. <br />
 									If you already have an account, just login 
 									to your account. <b>
-			<a href="default.asp?PageToShow=MyAccount">LOGIN &gt;&gt;</a><font color="#B52C21"><br>
-									<br>
+			<a href="default.asp?PageToShow=MyAccount">LOGIN &gt;&gt;</a><font color="#B52C21"><br />
+									<br />
 									</font></b>Go to Shopping Basket and click 
 									on the Save this Basket link.</td>
         </tr>
