--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/template_ProductMap.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/template_ProductMap.htm
@@ -42,14 +42,14 @@
         <tr>
           <td width="100%" height="12" valign="top" align="center">
           <p align="center"><font  size="1"><font color="#B52C21">
-          <br>
-          [FUNCTION3]<br>
+          <br />
+          [FUNCTION3]<br />
 &nbsp;</font></td>
         </tr>
         <tr>
           <td width="100%" height="1" valign="top" align="center">
-          <font  size="1">[TOOLBAR]<br>
-          [BANNER1]<br>
+          <font  size="1">[TOOLBAR]<br />
+          [BANNER1]<br />
           [BANNER2]</font></td>
         </tr>
         <tr>
