--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/template_ProductSearchOnKeywords.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/template_ProductSearchOnKeywords.htm
@@ -14,7 +14,7 @@
                     <center>
                     <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="172"  height="35">
                       <tr>
-                        <td width="100%" height="40"><br>
+                        <td width="100%" height="40"><br />
 						<img border="0" src="skins/skin3/images/menu/filtersearch.gif" width="172" height="40"></td>
                       </tr>
                       <tr>
@@ -24,7 +24,7 @@
                           <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="96%" >
                             <tr>
                               <td width="100%"><font size="1">Filter
-                                    By Category<br>
+                                    By Category<br />
                                     [CATEGORY_FILTER]</font></td>
                             </tr>
                           </table>
