--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/template_ProduktListe.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/template_ProduktListe.htm
@@ -6,7 +6,8 @@
     	<td width="11%" valign="top">
 			<table border="0" width="207" id="table1" cellspacing="0" cellpadding="10">
 				<tr>
-					<td bgcolor="#C0C0C0" height="300" valign="top">[CATEGORY_SUBLIST]</td>
+					<td bgcolor="#C0C0C0" height="300" valign="top">[CATEGORY_SUBLIST]<br />
+                        [NEWSLETTER]</td>
 				</tr>
 			</table>
     	</td>
