--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/template_kategorie_default.html
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/template_kategorie_default.html
@@ -158,11 +158,11 @@ target="_blank"><img class="statcounter"
 src="http://c.statcounter.com/4934180/0/767171e6/0/"
 alt="stats for wordpress" ></a></div></noscript>
 <!-- End of StatCounter Code -->
-					
+					[EXTRA_ADD_THIS]
 					</td>
 					<td align="right">
 						Designed by <a href="http://www.dazzlework.com/en/" target="_blank">
-						Dazzle Work Ltd.</a><br>
+						Dazzle Work Ltd.</a><br />
 						Created by <a href="http://www.griton.eu/" target="_blank">
 						Griton.eu.</a>
 					</td>
