--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/template_kategorie_default_flash.html
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/template_kategorie_default_flash.html
@@ -144,7 +144,7 @@
 					<td align="left">Copyright 2009 <a href="http://www.griton.eu">www.griton.eu</a>. Alle Rechte vorbehalten.</td>
 					<td align="right">
 						Designed by <a href="http://www.dazzlework.com/en/" target="_blank">
-						Dazzle Work Ltd.</a><br>
+						Dazzle Work Ltd.</a><br />
 						Created by <a href="http://www.griton.eu/" target="_blank">
 						Griton.eu.</a>
 					</td>
