--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/template_kategorie_produkte.html
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/template_kategorie_produkte.html
@@ -4,8 +4,9 @@
 	</tr>  
 	<tr>  
 		<td width="207" valign="top" bgcolor="#C0C0C0">
-[CATEGORY_SUBLIST]</td>  
-		<td valign="top"> <br>  
+[CATEGORY_SUBLIST]
+[NEWSLETTER]</td>  
+		<td valign="top"> <br />  
 [PRODUCTLIST]</td>  
 	</tr>  
 </table>  
