--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/template_warenkorbCommon.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_ptec/pages/template_warenkorbCommon.htm
@@ -4,7 +4,7 @@
  
                     <tr>
                       <td width="145">
-                      <p align="center"><b><font size="1" color="#666666"><a href="default.asp?pageToShow=MyBookmarks&amp;description=Produkte">Deine&nbsp;<br>
+                      <p align="center"><b><font size="1" color="#666666"><a href="default.asp?pageToShow=MyBookmarks&amp;description=Produkte">Deine&nbsp;<br />
  Wunschliste</a></font></b></td>
                       <td width="1" rowspan="3" bgcolor="#C0C0C0"><b>
                       <font size="1" color="#666666">
@@ -22,11 +22,11 @@
                     </tr>
                     <tr>
                       <td width="145">
-                      <p align="center"><b><font size="1" color="#666666"><a href="default.asp?pageToShow=MyBookmarks&amp;description=Warenkorb">gespeicherte&nbsp;<br>
+                      <p align="center"><b><font size="1" color="#666666"><a href="default.asp?pageToShow=MyBookmarks&amp;description=Warenkorb">gespeicherte&nbsp;<br />
  Warenk&ouml;rbe</a></font></b></td>
                       <td width="137">
                       <p align="center"><b><font size="1" color="#666666"><a href="cgi/calls/DoSendToAssociate.asp?typeToSave=Warenkorb" target="SendToAss" 
-                      OnClick="window.open('SendToAss','SendToAss','top=300,left=300,height=400,width=400,status=yes,toolbar=no,menubar=no,location=no');">Fragen&nbsp;<br>
+                      OnClick="window.open('SendToAss','SendToAss','top=300,left=300,height=400,width=400,status=yes,toolbar=no,menubar=no,location=no');">Fragen&nbsp;<br />
  stellen</a></font></b></td>
                     </tr>
                   </table>
